crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_lowercase-imported-as-non-lowercase_N812.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N812 Lowercase `stillbad` imported as non-lowercase `stillBad`
 --> N812.py:2:8
  |
1 | import mod.badallowed as badAllowed
2 | import mod.stillbad as stillBad
  |        ^^^^^^^^^^^^^^^^^^^^^^^^
3 |
4 | from mod import badallowed as BadAllowed
  |

N812 Lowercase `stillbad` imported as non-lowercase `StillBad`
 --> N812.py:5:17
  |
4 | from mod import badallowed as BadAllowed
5 | from mod import stillbad as StillBad
  |                 ^^^^^^^^^^^^^^^^^^^^
