crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_mixed-case-variable-in-global-scope_N816.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N816 Variable `stillBad` in global scope should not be mixedCase
 --> N816.py:2:1
  |
1 | badAllowed = 0
2 | stillBad = 0
  | ^^^^^^^^
3 |
4 | _badAllowed = 0
  |

N816 Variable `_stillBad` in global scope should not be mixedCase
 --> N816.py:5:1
  |
4 | _badAllowed = 0
5 | _stillBad = 0
  | ^^^^^^^^^
6 |
7 | bad_Allowed = 0
  |

N816 Variable `still_Bad` in global scope should not be mixedCase
 --> N816.py:8:1
  |
7 | bad_Allowed = 0
8 | still_Bad = 0
  | ^^^^^^^^^
