crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_py311_N802_N802.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N802.py:4:5: N802 Function name `Bad` should be lowercase
  |
4 | def Bad():
  |     ^^^ N802
5 |     pass
  |

N802.py:8:5: N802 Function name `_Bad` should be lowercase
  |
8 | def _Bad():
  |     ^^^^ N802
9 |     pass
  |

N802.py:12:5: N802 Function name `BAD` should be lowercase
   |
12 | def BAD():
   |     ^^^ N802
13 |     pass
   |

N802.py:16:5: N802 Function name `BAD_FUNC` should be lowercase
   |
16 | def BAD_FUNC():
   |     ^^^^^^^^ N802
17 |     pass
   |

N802.py:32:5: N802 Function name `tearDownModule` should be lowercase
   |
32 | def tearDownModule():
   |     ^^^^^^^^^^^^^^ N802
33 |     pass
   |

N802.py:37:9: N802 Function name `tearDown` should be lowercase
   |
36 | class Test(unittest.TestCase):
37 |     def tearDown(self):
   |         ^^^^^^^^ N802
38 |         return super().tearDown()
   |

N802.py:40:9: N802 Function name `testTest` should be lowercase
   |
38 |         return super().tearDown()
39 |
40 |     def testTest(self):
   |         ^^^^^^^^ N802
41 |         assert True
   |

N802.py:65:9: N802 Function name `bad_Name` should be lowercase
   |
63 |         pass
64 |
65 |     def bad_Name(self):
   |         ^^^^^^^^ N802
66 |         pass
   |

N802.py:81:9: N802 Function name `dont_GET` should be lowercase
   |
79 |         pass
80 |
81 |     def dont_GET(self):
   |         ^^^^^^^^ N802
82 |         pass
   |
