crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__invalid-function-name_N802.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N802 Function name `Bad` should be lowercase
 --> N802.py:4:5
  |
4 | def Bad():
  |     ^^^
5 |     pass
  |

N802 Function name `_Bad` should be lowercase
 --> N802.py:8:5
  |
8 | def _Bad():
  |     ^^^^
9 |     pass
  |

N802 Function name `BAD` should be lowercase
  --> N802.py:12:5
   |
12 | def BAD():
   |     ^^^
13 |     pass
   |

N802 Function name `BAD_FUNC` should be lowercase
  --> N802.py:16:5
   |
16 | def BAD_FUNC():
   |     ^^^^^^^^
17 |     pass
   |

N802 Function name `testTest` should be lowercase
  --> N802.py:40:9
   |
38 |         return super().tearDown()
39 |
40 |     def testTest(self):
   |         ^^^^^^^^
41 |         assert True
   |
help: Consider adding `@typing.override` if this method overrides a method from a superclass

N802 Function name `bad_Name` should be lowercase
  --> N802.py:65:9
   |
63 |         pass
64 |
65 |     def bad_Name(self):
   |         ^^^^^^^^
66 |         pass
   |
help: Consider adding `@typing.override` if this method overrides a method from a superclass

N802 Function name `dont_GET` should be lowercase
  --> N802.py:84:9
   |
82 |         pass
83 |
84 |     def dont_GET(self):
   |         ^^^^^^^^
85 |         pass
   |
help: Consider adding `@typing.override` if this method overrides a method from a superclass

N802 Function name `dont_OPTIONS` should be lowercase
  --> N802.py:95:9
   |
93 |         pass
94 |
95 |     def dont_OPTIONS(self):
   |         ^^^^^^^^^^^^
96 |         pass
   |
help: Consider adding `@typing.override` if this method overrides a method from a superclass

N802 Function name `dont_OPTIONS` should be lowercase
   --> N802.py:106:9
    |
104 |         pass
105 |
106 |     def dont_OPTIONS(self):
    |         ^^^^^^^^^^^^
107 |         pass
    |
help: Consider adding `@typing.override` if this method overrides a method from a superclass
