crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__lowercase-imported-as-non-lowercase_N812.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N812 Lowercase `lowercase` imported as non-lowercase `Lower`
 --> N812.py:1:8
  |
1 | import modl.lowercase as Lower
  |        ^^^^^^^^^^^^^^^^^^^^^^^
2 | from mod import lowercase as Lowercase
3 | from mod import another_lowercase as AnotherLowercase
  |

N812 Lowercase `lowercase` imported as non-lowercase `Lowercase`
 --> N812.py:2:17
  |
1 | import modl.lowercase as Lower
2 | from mod import lowercase as Lowercase
  |                 ^^^^^^^^^^^^^^^^^^^^^^
3 | from mod import another_lowercase as AnotherLowercase
  |

N812 Lowercase `another_lowercase` imported as non-lowercase `AnotherLowercase`
 --> N812.py:3:17
  |
1 | import modl.lowercase as Lower
2 | from mod import lowercase as Lowercase
3 | from mod import another_lowercase as AnotherLowercase
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
