crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__mixed-case-variable-in-class-scope_N815.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N815 Variable `mixedCase` in class scope should not be mixedCase
  --> N815.py:9:5
   |
 7 |     lower = 0
 8 |     CONSTANT = 0
 9 |     mixedCase = 0
   |     ^^^^^^^^^
10 |     _mixedCase = 0
11 |     mixed_Case = 0
   |

N815 Variable `_mixedCase` in class scope should not be mixedCase
  --> N815.py:10:5
   |
 8 |     CONSTANT = 0
 9 |     mixedCase = 0
10 |     _mixedCase = 0
   |     ^^^^^^^^^^
11 |     mixed_Case = 0
12 |     myObj1 = collections.namedtuple("MyObj1", ["a", "b"])
   |

N815 Variable `mixed_Case` in class scope should not be mixedCase
  --> N815.py:11:5
   |
 9 |     mixedCase = 0
10 |     _mixedCase = 0
11 |     mixed_Case = 0
   |     ^^^^^^^^^^
12 |     myObj1 = collections.namedtuple("MyObj1", ["a", "b"])
13 |     myObj2 = namedtuple("MyObj2", ["a", "b"])
   |

N815 Variable `tP` in class scope should not be mixedCase
  --> N815.py:34:5
   |
33 | class F:
34 |     tP = 0
   |     ^^
35 |     match tP:
36 |         case int(fN):  # N815
   |

N815 Variable `fN` in class scope should not be mixedCase
  --> N815.py:36:18
   |
34 |     tP = 0
35 |     match tP:
36 |         case int(fN):  # N815
   |                  ^^
37 |             ...
38 |         case fN2 as fN3:  # N815 (both capture and alias)
   |

N815 Variable `fN2` in class scope should not be mixedCase
  --> N815.py:38:14
   |
36 |         case int(fN):  # N815
37 |             ...
38 |         case fN2 as fN3:  # N815 (both capture and alias)
   |              ^^^
39 |             ...
40 |         case ok_name:
   |

N815 Variable `fN3` in class scope should not be mixedCase
  --> N815.py:38:21
   |
36 |         case int(fN):  # N815
37 |             ...
38 |         case fN2 as fN3:  # N815 (both capture and alias)
   |                     ^^^
39 |             ...
40 |         case ok_name:
   |
