crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__mixed-case-variable-in-global-scope_N816.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N816 Variable `mixedCase` in global scope should not be mixedCase
 --> N816.py:7:1
  |
5 | lower = 0
6 | CONSTANT = 0
7 | mixedCase = 0
  | ^^^^^^^^^
8 | _mixedCase = 0
9 | mixed_Case = 0
  |

N816 Variable `_mixedCase` in global scope should not be mixedCase
  --> N816.py:8:1
   |
 6 | CONSTANT = 0
 7 | mixedCase = 0
 8 | _mixedCase = 0
   | ^^^^^^^^^^
 9 | mixed_Case = 0
10 | myObj1 = collections.namedtuple("MyObj1", ["a", "b"])
   |

N816 Variable `mixed_Case` in global scope should not be mixedCase
  --> N816.py:9:1
   |
 7 | mixedCase = 0
 8 | _mixedCase = 0
 9 | mixed_Case = 0
   | ^^^^^^^^^^
10 | myObj1 = collections.namedtuple("MyObj1", ["a", "b"])
11 | myObj2 = namedtuple("MyObj2", ["a", "b"])
   |

N816 Variable `tP` in global scope should not be mixedCase
  --> N816.py:15:1
   |
13 | Point2D = TypedDict('Point2D', {'in': int, 'x-y': int})
14 |
15 | tP = 0
   | ^^
16 | match tP:
17 |     case fN1 as fN2:  # N816 (both capture and alias)
   |

N816 Variable `fN1` in global scope should not be mixedCase
  --> N816.py:17:10
   |
15 | tP = 0
16 | match tP:
17 |     case fN1 as fN2:  # N816 (both capture and alias)
   |          ^^^
18 |         ...
19 |     case {"key": 1, **fN3}:  # N816 (mapping rest)
   |

N816 Variable `fN2` in global scope should not be mixedCase
  --> N816.py:17:17
   |
15 | tP = 0
16 | match tP:
17 |     case fN1 as fN2:  # N816 (both capture and alias)
   |                 ^^^
18 |         ...
19 |     case {"key": 1, **fN3}:  # N816 (mapping rest)
   |

N816 Variable `fN3` in global scope should not be mixedCase
  --> N816.py:19:23
   |
17 |     case fN1 as fN2:  # N816 (both capture and alias)
18 |         ...
19 |     case {"key": 1, **fN3}:  # N816 (mapping rest)
   |                       ^^^
20 |         ...
21 |     case ok_name:
   |
