crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__preview_N818_N818_preview.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N818 Exception name `CustomBase` should be named with an Error suffix
 --> N818_preview.py:5:7
  |
5 | class CustomBase(Exception):
  |       ^^^^^^^^^^
6 |     pass
  |

N818 Exception name `Child` should be named with an Error suffix
  --> N818_preview.py:9:7
   |
 9 | class Child(CustomBase):
   |       ^^^^^
10 |     pass
   |

N818 Exception name `GrandChild` should be named with an Error suffix
  --> N818_preview.py:13:7
   |
13 | class GrandChild(Child):
   |       ^^^^^^^^^^
14 |     pass
   |

N818 Exception name `ValidationErrr` should be named with an Error suffix
  --> N818_preview.py:17:7
   |
17 | class ValidationErrr(ValueError):
   |       ^^^^^^^^^^^^^^
18 |     pass
   |

N818 Exception name `NestedValidation` should be named with an Error suffix
  --> N818_preview.py:21:7
   |
21 | class NestedValidation(ValidationErrr):
   |       ^^^^^^^^^^^^^^^^
22 |     pass
   |
