crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__stable_N818_N818_preview.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N818 Exception name `CustomBase` should be named with an Error suffix
 --> N818_preview.py:5:7
  |
5 | class CustomBase(Exception):
  |       ^^^^^^^^^^
6 |     pass
  |

N818 Exception name `ValidationErrr` should be named with an Error suffix
  --> N818_preview.py:17:7
   |
17 | class ValidationErrr(ValueError):
   |       ^^^^^^^^^^^^^^
18 |     pass
   |
